# securedrop-workstation-podman

./: .gitignore  .gitmodules  Dockerfile-client  README.md  pyproject.toml
components/client/: Dockerfile  entrypoint.sh
components/tor/: Dockerfile  entrypoint.sh
securedrop_workstation_podman/: __init__.py
tor/: Dockerfile  entrypoint.sh
