[tool.poetry]
name = "securedrop-workstation-podman"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
securedrop = "securedrop_workstation_podman:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
